Squashed commit of the following:
commit d92a5491201827937e8812e84d1af11cb78b9a90
Author: Sandy Dunlop <sandy.dunlop@gmail.com>
Date:   Thu Jul 31 01:02:53 2025 +0100

    version 0.1.6

commit 3f7f904fab7413d758bb1839f55c676b8e211259
Author: Sandy Dunlop <sandy.dunlop@gmail.com>
Date:   Thu Jul 31 00:57:51 2025 +0100

    FIxed sonar issues

commit aede4e2c5c8dc9208a35cf24212592a92d78f944
Author: Sandy Dunlop <sandy.dunlop@gmail.com>
Date:   Thu Jul 31 00:40:58 2025 +0100

    Fixed a problem where JUnit and Mockito classes ended up in the documentation output of tests when they're not listed in the included packages. More tests. Refactoring.

commit dcf9a7ed9f2170d8eea21311ce4e7008c7c4bd6c
Author: Sandy Dunlop <sandy.dunlop@gmail.com>
Date:   Wed Jul 30 18:45:26 2025 +0100

    refactoring, testing

commit ff17a6e03972bae190f2d5773d3c01bc74398932
Author: Sandy Dunlop <sandy.dunlop@gmail.com>
Date:   Wed Jul 30 01:49:32 2025 +0100

    adding tests

commit b78a4b8722808f7504dc76fa69b33fe624ce19ab
Author: Sandy Dunlop <sandy.dunlop@gmail.com>
Date:   Wed Jul 30 00:50:47 2025 +0100

    refactor

commit 5d5cc4e5eab75a216a70db8060e584289ddc2a90
Author: Sandy Dunlop <sandy.dunlop@gmail.com>
Date:   Wed Jul 30 00:33:36 2025 +0100

    Adding more tests

commit 50263c48dd62f34a4e53584f2c79c111f94a1f46
Author: Sandy Dunlop <sandy.dunlop@gmail.com>
Date:   Tue Jul 29 23:39:25 2025 +0100

    More tests

commit 78d0d34d36fdf90f19ee4bf9d664acb5719a31c6
Author: Sandy Dunlop <sandy.dunlop@gmail.com>
Date:   Tue Jul 29 18:18:20 2025 +0100

    More tests

commit 5cc04cde312f36bbd8e1725772d9abd4733c3af5
Author: Sandy Dunlop <sandy.dunlop@gmail.com>
Date:   Tue Jul 29 18:06:57 2025 +0100

    adding TypeUtils tests

commit b6d801e83c73557f93106f94cf13992cfdbeafd8
Author: Sandy Dunlop <sandy.dunlop@gmail.com>
Date:   Tue Jul 29 16:01:33 2025 +0100

    Refactor; fixing sonar issues

commit 33688e484c54590cabc34e82dcfe94b0fb26ef20
Author: Sandy Dunlop <sandy.dunlop@gmail.com>
Date: